[workspace]
members = [
    "authtea",
    "netstatus",
    "color-theme",
    "tunet-helper",
    "tunet-settings",
    "tunet-model",
    "tunet",
    "tunet-cui",
    "tunet-gui",
    "tunet-service",
    "tunet-flutter/native",
]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
license = "MIT"
repository = "https://github.com/Berrysoft/tunet-rust"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[workspace.dependencies]
authtea = { path = "authtea" }
color-theme = { path = "color-theme" }
netstatus = { path = "netstatus" }

tunet-helper = { path = "tunet-helper" }
tunet-model = { path = "tunet-model" }
tunet-settings = { path = "tunet-settings" }

async-trait = "0.1"
once_cell = "1"

anyhow = "1"
cfg-if = "1"
enum_dispatch = "0.3"
thiserror = "1"

chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
log = "0.4"
base64 = "0.21"

futures-core = "0.3"
futures-util = "0.3"

itertools = "0.12"

keyring = { version = "2", features = ["linux-no-secret-service"] }
mac_address2 = "2"

serde = "1"
serde_json = "1"
serde_with = "3"

tokio = "1"
tokio-stream = "0.1"

objc = "0.2"
core-foundation = "0.9"
system-configuration = "0.5"

windows = "0.51"
winresource = "0.1"
