[workspace]
members = [
    "authtea",
    "netstatus",
    "color-theme",
    "tunet-helper",
    "tunet-settings",
    "tunet-model",
    "tunet",
    "tunet-cui",
    "tunet-gui",
    "tunet-service",
    "tunet-flutter/native",
]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
license = "MIT"
repository = "https://github.com/Berrysoft/tunet-rust"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[workspace.dependencies]
authtea = { path = "authtea" }
color-theme = { path = "color-theme" }
netstatus = { path = "netstatus" }

tunet-helper = { path = "tunet-helper" }
tunet-model = { path = "tunet-model" }
tunet-settings = { path = "tunet-settings" }

anyhow = "1"
async-stream = "0.3"
cfg-if = "1"
enum_dispatch = "0.3"
thiserror = "1"

compio = "0.12"
cyper = { version = "0.1.0-beta.6", default-features = false }
flume = "0.11"

chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
log = "0.4"
base64 = "0.22"

futures-core = "0.3"
futures-util = "0.3"

itertools = "0.13"

keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
mac_address2 = "2"

rustls = { version = "0.23", default-features = false }
rustls-platform-verifier = "0.3"


serde = "1"
serde_json = "1"
serde_with = "3"

core-foundation = "0.9"
system-configuration = "0.6"

windows = "0.58"
winresource = "0.1"
