[workspace]
members = [
    "authtea",
    "netstatus",
    "color-theme",
    "tunet-helper",
    "tunet-settings",
    "tunet-model",
    "tunet",
    "tunet-gui",
    "tunet-service",
    "tunet-flutter/native",
]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
license = "MIT"
repository = "https://github.com/Berrysoft/tunet-rust"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[workspace.dependencies]
authtea = { path = "authtea" }
color-theme = { path = "color-theme" }
netstatus = { path = "netstatus" }

tunet-helper = { path = "tunet-helper" }
tunet-model = { path = "tunet-model" }
tunet-settings = { path = "tunet-settings" }

anyhow = "1"
async-stream = "0.3"
cfg-if = "1"
enum_dispatch = "0.3"
thiserror = "2"

compio = "0.14"
cyper = { version = "0.3", default-features = false }
winio = "0.5.1"
flume = "0.11"

chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
log = "0.4"
base64 = "0.22"

futures-util = "0.3"

keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }

rustls = { version = "0.23", default-features = false }
rustls-platform-verifier = "0.5"

serde = "1"
serde_json = "1"
serde_with = "3"

libc = "0.2"

windows = "0.61"
winresource = "0.1"
