[package]
name = "color-theme"
version = "0.1.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
cfg-if = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.40", features = [
    "UI_ViewManagement",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
