[package]
name = "keyring"
version = "0.1.2"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.34", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
] }
widestring = "1.0.0-beta.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.4"

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
keyutils = { git = "https://github.com/mathstuf/rust-keyutils.git" }
