[package]
name = "keyring"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cfg-if = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
] }
widestring = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
keyutils = { git = "https://github.com/mathstuf/rust-keyutils.git" }
