[package]
name = "netstatus"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cfg-if = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Networking_Connectivity"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
objc2-core-wlan = { version = "0.3", features = [
    "CWInterface",
    "CWWiFiClient",
] }
objc2-system-configuration = { version = "0.3", features = [
    "libc",
    "SCNetworkReachability",
] }
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
flume = { workspace = true }
pin-project = "1"

[target.'cfg(target_os = "linux")'.dependencies]
netlink_wi = "0.6"
