[package]
name = "netstatus"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cfg-if = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Networking_Connectivity"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
objc2-core-wlan = "0.3"
objc2-system-configuration = { version = "0.3", features = ["libc"] }
objc2-core-foundation = "0.3"
objc2-core-location = "0.3"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
flume = { workspace = true }
pin-project = "1"

[target.'cfg(target_os = "linux")'.dependencies]
netlink_wi = "0.7"
