[package]
name = "netstatus"
version = "0.1.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cfg-if = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Networking_Connectivity"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
libc = { workspace = true }
objc2-core-foundation = "0.3"
objc2-system-configuration = { version = "0.3", features = ["libc"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-wlan = "0.3"
objc2-core-location = "0.3"

[target.'cfg(any(windows, target_vendor = "apple"))'.dependencies]
flume = { workspace = true }
pin-project = "1"

[target.'cfg(target_os = "linux")'.dependencies]
netlink_wi = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
ndk-context = "0.1"
