[package]
name = "tunet-cui"
version = "0.7.2"
description = "A console UI for Tsinghua University campus network."
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
tunet-model = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
futures-util = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { version = "0.26", features = ["event-stream"] }
tui = { version = "0.20", package = "ratatui" }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = { workspace = true }
