[package]
name = "tunet-cui"
version = "0.9.1"
description = "Tsinghua University network CUI"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
tunet-model = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
futures-util = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { version = "0.27", features = ["event-stream"] }
tui = { version = "0.22.1-alpha.2", package = "ratatui" }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = { workspace = true }

[package.metadata.winresource]
OriginalFilename = "tunet-cui.exe"
LegalCopyright = "Copyright © 2021-2023 Berrysoft"
