[package]
name = "tunet-cui"
version = "0.9.5"
description = "Tsinghua University network CUI"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
tunet-model = { workspace = true }
compio = { workspace = true, features = ["macros", "time"] }
flume = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = { workspace = true }

[package.metadata.winresource]
OriginalFilename = "tunet-cui.exe"
LegalCopyright = "Copyright © 2021-2023 Berrysoft"
