[package]
name = "tunet-gui"
version = "0.10.5"
description = "Tsinghua University network GUI"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
tunet-model = { workspace = true }
anyhow = { workspace = true }
compio = { workspace = true, features = ["time"] }
flume = { workspace = true }
winio = { workspace = true, default-features = false, features = ["qt"] }
futures-util = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = { workspace = true }

[features]
default = ["win32"]
win32 = ["winio/win32", "winio/win32-dark-mode"]
winui = ["winio/winui", "winio/winui-enable-cbs", "winio/win32-dark-mode"]
objc-static = ["winio/objc-static"]

[package.metadata.winresource]
OriginalFilename = "tunet-gui.exe"
LegalCopyright = "Copyright © 2021-2025 Berrysoft"
