[package]
name = "tunet-gui"
version = "0.11.1"
description = "Tsinghua University network GUI"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "main"

[dependencies]
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
tunet-model = { workspace = true }
winio = { workspace = true, default-features = false, features = [
    "qt",
    "compio-compat",
    "windows-dark-mode",
] }

anyhow = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.6"
android_logger = "0.15"

jni = { workspace = true }
rustls-platform-verifier = { workspace = true }

[features]
default = ["win32"]
win32 = ["winio/win32"]
winui = ["winio/winui", "winio/winui-enable-cbs", "winio/winui-content-dialog"]
objc-static = ["winio/objc-static"]

[package.metadata.winresource]
OriginalFilename = "tunet-gui.exe"
LegalCopyright = "Copyright © 2021-2026 Berrysoft"

[package.metadata.bundle]
name = "tunet"
identifier = "io.github.berrysoft.tunet"
icon = ["../logo.png"]
