[package]
name = "tunet-gui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
color-theme = { workspace = true }
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
tunet-model = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
slint = { version = "1", default-features = false, features = [
    "std",
    "compat-1-0",
] }
paste = "1"

[target.'cfg(target_os = "windows")'.dependencies]
slint = { version = "1", default-features = false, features = [
    "renderer-winit-skia",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
slint = { version = "1", default-features = false, features = [
    "backend-winit",
    "renderer-winit-femtovg",
] }

[build-dependencies]
slint-build = "1"
