[package]
name = "tunet-helper"
version = "0.20.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
authtea = { workspace = true }
netstatus = { workspace = true }
nyquest = { workspace = true, features = ["async"] }
url = "2"
md-5 = "0.11"
sha1 = "0.11"
hmac = "0.13"
data-encoding = "2"
base64 = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
allo-isolate = { version = "0.1", features = ["chrono"], optional = true }

[target.'cfg(any(windows, target_os = "android"))'.dependencies]
# imported by `windows-native-keyring-store` and `android_logger`
regex = "1"

[target.'cfg(not(any(windows, target_os = "android")))'.dependencies]
regex = { package = "regex-lite", version = "0.1" }

[target.'cfg(target_os = "android")'.dependencies]
cyper = { workspace = true, default-features = false, features = [
    "rustls",
    "nyquest-async",
] }
rustls = { workspace = true, default-features = false, features = ["ring"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
nyquest-preset = { workspace = true, features = ["async"] }

[features]
default = []
dart = ["allo-isolate"]
