[package]
name = "tunet-helper"
version = "0.21.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
authtea = { workspace = true }
netstatus = { workspace = true }
nyquest = { workspace = true, features = ["async"] }
url = "2"
md-5 = "0.11"
sha1 = "0.11"
hmac = "0.13"
data-encoding = "2"
base64 = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
cyper = { workspace = true, features = ["rustls", "nyquest-async"] }
# imported by `android-native-keyring-store` and `android_logger`
regex = "1"
rustls = { workspace = true, default-features = false, features = ["ring"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
cyper = { workspace = true, features = ["native-tls", "nyquest-async"] }

[target.'cfg(not(any(target_os = "android", target_vendor = "apple")))'.dependencies]
nyquest-preset = { workspace = true, features = ["async"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
regex = { package = "regex-lite", version = "0.1" }
