[package]
name = "tunet-model-native"
version = "0.1.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
tunet-rust = { path = "../tunet-rust", features = [ "netstatus" ] }
netstatus = { path = "../netstatus" }
tunet-settings = { path = "../tunet-settings" }
tunet-model = { path = "../tunet-model" }
color-theme = { path = "../color-theme" }
tokio = { version = "1.11", features = [ "rt-multi-thread" ] }
mac_address = "1.1"
once_cell = "1.8"
anyhow = "1.0"
itertools = "0.10"
