[package]
name = "tunet-model-native"
version = "0.1.1"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
tunet-helper = { path = "../tunet-helper" }
netstatus = { path = "../netstatus" }
tunet-settings = { path = "../tunet-settings" }
tunet-model = { path = "../tunet-model" }
color-theme = { path = "../color-theme" }
tokio = { version = "1.14", features = [ "rt-multi-thread" ] }
mac_address = "1.1"
anyhow = "1.0"
itertools = "0.10"
widestring = "1.0.0-beta.1"
