[package]
name = "tunet-model-native"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
color-theme = { workspace = true }
netstatus = { workspace = true }
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
tunet-model = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
mac_address = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
widestring = { workspace = true }
