[package]
name = "tunet-model"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flume = { workspace = true }
tunet-helper = { workspace = true }
netstatus = { workspace = true }
futures-util = { workspace = true }
compio = { workspace = true }
anyhow = { workspace = true }
drop_guard = "0.3"
async-once-cell = "0.5"
